package com.example.application_trello.Objects;

/**
 * Interface Observateur
 * fait par Titouan
 */
public interface Observateur {
    public void actualiser(Sujet s);
}
